force-app/main/default/objects/iLead__c/iLead__c.object-meta.xml
<CustomObject>
    <description>Created for Registration Page creating Leads</description>
    <label>Lead</label>
    <nameField>
        <displayFormat>LD{00000}</displayFormat>
        <label>Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>