force-app/main/default/objects/iLead__c/fields/About_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>About_Warehouse__c</fullName>
    <label>About Warehouse</label>
    <type>TextArea</type>
</CustomField>