force-app/main/default/objects/iLead__c/fields/Company_Established_Year__c.field-meta.xml
<CustomField>
    <fullName>Company_Established_Year__c</fullName>
    <label>Company Established Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>