force-app/main/default/objects/iLead__c/fields/Contact_Person_Designation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Designation__c</fullName>
    <label>Contact Person Designation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>