force-app/main/default/objects/iLead__c/fields/Custom__c.field-meta.xml
<CustomField>
    <fullName>Custom__c</fullName>
    <label>Custom</label>
    <length>30</length>
    <type>Text</type>
</CustomField>