force-app/main/default/objects/iLead__c/fields/Your_Company_Current_Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Your_Company_Current_Primary_Business__c</fullName>
    <label>Your Company Current Primary Business</label>
    <length>100</length>
    <type>Text</type>
</CustomField>