force-app/main/default/objects/iLead__c/recordTypes/Converted.recordType-meta.xml
<RecordType>
    <fullName>Converted</fullName>
    <active>true</active>
    <label>Converted</label>
</RecordType>