force-app/main/default/objects/iLead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>First_Name__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Lead_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>